fixed scrollbar issue again

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,5 +34,5 @@ body {
 
 *{
   /* border: 1px solid red; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
